correct scrollarea on mobile

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,17 +1,17 @@
 body {
     line-height: 1.5;
 
-    width: 100vw;
-    height: 100vh;
+    min-height: 100dvh;
 
     overflow: hidden;
+    padding-bottom: env(safe-area-inset-bottom);
 }
 
 #app {
     display: flex;
     column-gap: var(--app-padding);
     width: 100%;
-    height: 100%;
+    min-height: 100dvh;
 
     padding: var(--app-padding);
     padding-left: 0;
@@ -33,11 +33,10 @@ body {
         color: var(--color-text);
         flex: 1;
         width: 100%;
-        height: 100%;
+        height: 100dvh;
         border-radius: 10px;
         overflow: auto;
-
-        padding-bottom: calc(100svh - 100dvh);
+        padding-bottom: max(env(safe-area-inset-bottom), 1rem);
 
         scrollbar-color: var(--scrollbar-color-thumb) transparent;
         scrollbar-gutter: stable;
