--- a/src/styles/note/note.css
+++ b/src/styles/note/note.css
@@ -18,6 +18,7 @@
     border: 0 !important;
     outline: 0 !important;
     box-shadow: none !important;
+    height: auto;
 
     li:not(:first-child) {
         margin-top: 0.25em;
